[tool.poetry]
name = "IT-Lobby-Minion"
version = "0.1.0"
description = ""
authors = ["Ivan Krakovskii <iv.krak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.4.1"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
